--- a/Dyplom/rozdzial01.tex
+++ b/Dyplom/rozdzial01.tex
@@ -1,10 +1,10 @@
 \chapter{Wstęp}
 \section{Wprowadzenie}
-Rola automatyzacji w obsłudze klienta znacznie wzrosła w ostatnich latach. Można to zaobserwować w dynamice, z jaką ewoluują systemy informatyczne nazywane elektronicznymi biurami obsługi klienta (eBOK). Takie systemy są szeroko stosowane w różnych branżach sektora usług, takich jak energetyka, wodociągi, telekomunikacja i usługi multimedialne.
+Rola automatyzacji w obsłudze klienta znacznie wzrosła w ostatnich latach. Można to zaobserwować w dynamice, z jaką ewoluują systemy informatyczne nazywane elektronicznymi biurami obsługi klienta (eBOK). Takie systemy są szeroko stosowane w różnych branżach sektora usług, takich jak energetyka, wodociągi, telekomunikacja, usługi multimedialne i zarządzanie wspólnotami mieszkaniowymi.
 
-Z punktu widzenia użytkowników główną ich zaletą eBOKów jest możliwość skorzystania z oferowanych przez nie funkcji w dowolnym miejscu i czasie. Cecha ta nie tylko poprawia jakość obsługi klienta, ale także zwiększa efektywność organizacji wdrażających takie rozwiązanie. Poza zapewnieniem dostępu do informacji o rozliczeniach i płatnościach eBOKi wspierają także realizację bardziej zaawansowanych procesów, jak zgłaszanie problemów technicznych, zarządzanie zgłoszeniami serwisowymi i~komunikację z zarządem. Ważnym aspektem tych systemów jest bezpieczeństwo danych osobowych, które jest zapewniane poprzez regularne aktualizacje systemu, wdrażanie mechanizmów uwierzytelniania dwuskładnikowego oraz zgodność z przepisami o ochronie danych osobowych, takimi jak RODO.
+Z punktu widzenia użytkowników główną zaletą eBOKów jest możliwość skorzystania z oferowanych przez nie funkcji w dowolnym miejscu i czasie. Cecha ta nie tylko poprawia jakość obsługi klienta, ale także zwiększa efektywność organizacji wdrażających takie rozwiązanie. Poza zapewnieniem dostępu do informacji o rozliczeniach i płatnościach, eBOKi wspierają także realizację bardziej zaawansowanych procesów, jak zgłaszanie problemów technicznych, zarządzanie zgłoszeniami serwisowymi i komunikację z zarządem. Ważnym aspektem tych systemów jest bezpieczeństwo danych osobowych, które jest zapewniane poprzez regularne aktualizacje systemu, wdrażanie mechanizmów uwierzytelniania dwuskładnikowego oraz zgodność z przepisami o ochronie danych osobowych, takimi jak RODO.
 
-Obecnie na rynku spotkać można wiele systemów typu eBOK. Jednym z z nich jest system ,,Energa24''. Umożliwia on klientom dostęp do informacji o zużyciu energii, przeglądanie i pobieranie rachunków, dokonywanie płatności online oraz zgłaszanie awarii~\cite{energa}. Standardowy scenariusz dokonywania płatności za pomocą tej aplikacji pokazano na Rysunku \ref{fig:energa_manual}. Użytkownik może wybrać odpowiedni rachunek, a następnie poprzez bezpieczną bramkę płatności uiścić należności bezpośrednio w systemie.
+Obecnie na rynku spotkać można wiele systemów typu eBOK. Jednym z nich jest system ,,Energa24''. Umożliwia on klientom dostęp do informacji o zużyciu energii, przeglądanie i pobieranie rachunków, dokonywanie płatności online oraz zgłaszanie awarii~\cite{energa}. Standardowy scenariusz dokonywania płatności za pomocą tej aplikacji pokazano na Rysunku \ref{fig:energa_manual}. Użytkownik może wybrać odpowiedni rachunek, a następnie poprzez bezpieczną bramkę płatności uiścić należności bezpośrednio w systemie.
 
 \begin{figure}[htb]
 	\centering
@@ -14,7 +14,7 @@ Obecnie na rynku spotkać można wiele systemów typu eBOK. Jednym z z nich jest
 	\label{fig:energa_manual}
 \end{figure}
 
-Innym przykładem systemu eBOK jest rozwiązanie dostarczane przez operatora Play, które umożliwia użytkownikom zarządzanie usługami telekomunikacyjnymi oraz multimediami. Aplikacja Play24 oferuje szeroki zakres funkcji, takich jak monitorowanie zużycia internetu, minut czy SMS-ów, co pozwala użytkownikom na bieżąco śledzić stan swoich pakietów i w razie potrzeby dokupować dodatkowe usługi. Użytkownicy mogą również sprawdzać historię swoich aktywności, w tym szczegółowe informacje na temat wysyłanych wiadomości, połączeń czy zakupionych pakietów ~\cite{Play24}.
+Innym przykładem systemu eBOK jest rozwiązanie dostarczane przez operatora telekomunikacji Play, który umożliwia użytkownikom zarządzanie usługami telekomunikacyjnymi oraz multimediami. System ,,Play24'' oferuje szeroki zakres funkcji, takich jak monitorowanie zużycia internetu, minut rozmów czy SMS-ów, co pozwala użytkownikom na bieżąco śledzić stan swoich pakietów i w razie potrzeby dokupować dodatkowe usługi. Użytkownicy mogą również sprawdzać historię swoich aktywności, w tym szczegółowe informacje na temat wysyłanych wiadomości, połączeń czy zakupionych pakietów ~\cite{Play24}.
 
 System ,,Play24'' pozwala także na łatwe i szybkie regulowanie płatności za usługi telekomunikacyjne, oferując różnorodne metody płatności, w tym Google Pay, Apple Pay oraz BLIK. Użytkownicy mogą skonfigurować automatyczne płatności, co znacząco upraszcza zarządzanie opłatami. Dodatkowo, aplikacja umożliwia dostęp do szczegółowych faktur oraz wyciągów z historii transakcji, co ułatwia kontrolowanie bieżących wydatków.
 
@@ -47,11 +47,11 @@ Finalny produkt opracowywany w ramach tej pracy inżynierskiej będzie nosił na
 
 Celem niniejszego opracowania jest zaprojektowanie i wdrożenie internetowej aplikacji elektronicznego biura obsługi klienta (eBOK) dla wspólnoty mieszkaniowej. Aplikacja ma ułatwiać zarządzanie procesami związanymi z komunikacją, płatnościami, zgłoszeniami technicznymi i dostępem do odpowiednich dokumentów. Dzięki temu zarówno mieszkańcy wspólnoty, jak i użytkownicy zarządzający będą mogli korzystać z kompleksowego narzędzia, które powinno automatyzować wiele codziennych zadań i zwiększać efektywność zarządzania.
 
-Zakres prac obejmuje cały cykl rozwoju oprogramowania, począwszy od analizy potrzeb wspólnoty mieszkaniowej, przez zaprojektowanie architektury systemu, aż po wdrożenie i przetestowanie gotowego rozwiązania. Analiza wymagań obejmie zarówno potrzeby funkcjonalne, jak i niefunkcjonalne, takie jak bezpieczeństwo, wydajność oraz łatwość integracji z zewnętrznymi systemami. Projektowanie uwzględnia iteracyjny proces testowania oraz możliwość przyszłych rozszerzeń o dodatkowe moduły funkcjonalne.
+Zakres prac obejmuje cały cykl rozwoju oprogramowania, począwszy od analizy potrzeb wspólnoty mieszkaniowej, przez zaprojektowanie architektury systemu, aż po wdrożenie i przetestowanie gotowego rozwiązania. Analiza wymagań będzie obejmować zarówno potrzeby funkcjonalne, jak i niefunkcjonalne, takie jak bezpieczeństwo, wydajność oraz łatwość integracji z zewnętrznymi systemami. Projektowanie uwzględnia iteracyjny proces testowania oraz możliwość przyszłych rozszerzeń o dodatkowe moduły funkcjonalne.
 
 Aplikacja będzie dostępna w przeglądarce internetowej i zoptymalizowana pod kątem dostępu z różnych urządzeń, w tym również w wersji desktopowej. Backend systemu zostanie zrealizowany z wykorzystaniem technologii Java i Spring Boot, co umożliwi tworzenie skalowalnych, bezpiecznych i łatwych w utrzymaniu aplikacji. Baza danych PostgreSQL będzie działać jako obraz Dockerowy, co zapewni izolację środowiska oraz ułatwi wdrażanie, zarządzanie i skalowanie aplikacji~\cite{EARTHLY}.
 
-Frontend aplikacji zostanie stworzony w języku TypeScript i frameworku Next.js, co pozwoli na budowanie nowoczesnego, responsywnego interfejsu użytkownika, zapewniającego intuicyjność i szybkie działanie aplikacji.
+Frontend aplikacji zostanie stworzony w języku TypeScript i frameworku Next.js, co powinno pozwolić na zbudowanie nowoczesnego, responsywnego interfejsu użytkownika, zapewniającego intuicyjność i szybkie działanie aplikacji.
 
 \section{Układ pracy}
 % tutaj opis zawartości kolejnych rozdziałów, można zredagować na końcu
